# deltav

./: .gitignore  LICENSE  README.md  README.ru.md  install.ps1  install.sh  pyproject.toml
deltav/: __init__.py  bootstrap.py  cli.py  client.py  config.py  crypto.py  economics.py  light.py  proxy.py  sim.py  tgbot.py  wallet.py
deltav/chain/: __init__.py  block.py  blockchain.py  consensus.py  state.py  transaction.py
deltav/companion/: __init__.py  agent.py  identity.py  memory.py
deltav/compute/: __init__.py  asic.py  base.py  detect.py  diffusion.py  groq.py  llamacpp.py  llamaserver.py  mock.py
deltav/gateway/: __init__.py  accounts.py  anthropic.py  app.py  chat.html  keys.py  ollama.py  portal.html  portal.py
deltav/net/: __init__.py  reach.py  relay.py  security.py
deltav/node/: __init__.py  daemon.py  explorer.html  verify.py
deltav/overlay/: __init__.py  agent.py  memory.py  search.py  toolcall.py  tools.py
deltav/registry/: __init__.py  registry.py
deltav/router/: __init__.py  catalog.py  planner.py  router.py  scoring.py
deltav/setup/: __init__.py  assets.py  custom.py  i18n.py  schedule.py  wizard.py
deltav/training/: __init__.py  coordinator.py  dataset.py
docs/: CLIENT.md  CLIENT.ru.md  HOSTING.md  HOSTING.ru.md  INTEGRATIONS.md
tests/: conftest.py  test_accounts.py  test_billing.py  test_catalog.py  test_chain.py  test_chainv2.py  test_client.py  test_companion.py  test_consensus.py  test_crypto.py  test_diffusion.py  test_e2e.py  test_engine_capabilities.py  test_frontend.py  test_light.py  test_llamaserver.py  test_modality.py  test_net.py  test_ollama.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_planner.py  test_portal.py  test_proxy.py  test_registry.py  test_router.py  test_schedule.py  test_security_fixes.py  test_setup.py  test_tgbot.py  test_tokenomics.py  test_vision.py
