[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deltav-network"
version = "0.1.0"
description = "Delta V — decentralized AI inference network with its own PoS chain and smart model routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "cryptography>=42",
]

[project.optional-dependencies]
gpu = ["llama-cpp-python>=0.2.79"]
hub = ["huggingface_hub>=0.23"]
# Text-to-image (FLUX.1-schnell et al). Heavy and CUDA-specific, hence opt-in:
#   pip install "deltav-network[image]"   (install torch for your CUDA first)
image = [
    "diffusers>=0.31",
    "transformers>=4.44",
    "accelerate>=0.33",
    "sentencepiece>=0.2",
    "protobuf>=4",
    "pillow>=10",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
deltav = "deltav.cli:main"

[tool.setuptools.packages.find]
include = ["deltav*"]

[tool.setuptools.package-data]
"deltav.node" = ["*.html"]
"deltav.gateway" = ["*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
